--- a/EZMusic/Properties/Settings.settings
+++ b/EZMusic/Properties/Settings.settings
@@ -17,5 +17,8 @@
     <Setting Name="isdelafterfinish" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="istickallsearching" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
